pom: Add GraalVM Native-Image build profile